
- PCRE:
  . Fixed bug #78197 (PCRE2 version check in configure fails for "##.##-xxx"
    version strings). (pgnet, Peter Kokot)

- PDO_Sqlite:
  . Fixed bug #78192 (SegFault when reuse statement after schema has changed).
    (Vincent Quatrevieux)

- SQLite:
  . Upgraded to SQLite 3.28.0. (cmb)

- Standard:
  . Fixed #78241 (touch() does not handle dates after 2038 in PHP 64-bit). (cmb)

04 Jul 2019, PHP 7.3.7

- Core:
  . Fixed bug #76980 (Interface gets skipped if autoloader throws an exception).
    (Nikita)

- DOM:
  . Fixed bug #78025 (segfault when accessing properties of DOMDocumentType).
    (cmb)

- MySQLi:
  . Fixed bug #77956 (When mysqli.allow_local_infile = Off, use a meaningful
    error message). (Sjon Hortensius)
  . Fixed bug #38546 (bindParam incorrect processing of bool types).
    (camporter)

- MySQLnd:
  . Fixed bug #77955 (Random segmentation fault in mysqlnd from php-fpm).
    (Nikita)

- Opcache:
  . Fixed bug #78015 (Incorrect evaluation of expressions involving partials
    arrays in SCCP). (Nikita)
  . Fixed bug #78106 (Path resolution fails if opcache disabled during request).
    (Nikita)

- OpenSSL:
  . Fixed bug #78079 (openssl_encrypt_ccm.phpt fails with OpenSSL 1.1.1c).
    (Jakub Zelenka)

- phpdbg:
  . Fixed bug #78050 (SegFault phpdbg + opcache on include file twice).
    (Nikita)

- Sockets:
  . Fixed bug #78038 (Socket_select fails when resource array contains
    references). (Nikita)

- Sodium:
  . Fixed bug #78114 (segfault when calling sodium_* functions from eval). (cmb)

- Standard:
  . Fixed bug #77135 (Extract with EXTR_SKIP should skip $this).
    (Craig Duncan, Dmitry)
  . Fixed bug #77937 (preg_match failed). (cmb, Anatol)

- Zip:
  . Fixed bug #76345 (zip.h not found). (Michael Maroszek)

30 May 2019, PHP 7.3.6

- cURL:
  . Implemented FR #72189 (Add missing CURL_VERSION_* constants). (Javier
    Spagnoletti)

- EXIF:
  . Fixed bug #77988 (heap-buffer-overflow on php_jpg_get16).
    (CVE-2019-11040) (Stas)

- FPM: