@@ -46,6 +46,7 @@ PHP                                                                        NEWS
 
 - Standard:
   . Fixed #78241 (touch() does not handle dates after 2038 in PHP 64-bit). (cmb)
+  . Fixed bug #78269 (password_hash uses weak options for argon2). (Remi)
 
 04 Jul 2019, PHP 7.3.7
 
